[package]
name = "cbp-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.17"
futures-util = "0.3.31"
poem = "3.1.12"
serde = "1.0.228"
serde_json = "1.0.145"
slab = "0.4.11"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.20"

[[bin]]
name = "cbp-gateway"
path = "src/main.rs"
